--- a/my-recipe-app/src/app/dashboard/dashboard.component.html
+++ b/my-recipe-app/src/app/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
     <section class="topRecipes">
         <div class="topRecipes-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-1 gap-2">
             <ul *ngFor="let recipe of suggestedRecipes">
-                <div class="recipe-card max-w-sm mx-auto p-2 bg-indigo rounded-lg shadow-xl bg-indigo-200">
+                <div class="recipe-card max-w-sm mx-auto p-2 bg-indigo rounded-lg shadow-xl bg-blue-200">
                     <a routerLink="/detail/{{recipe.id}}">
                         <h2 class="text-xl pb-2">{{recipe.title}}</h2>
                         <img class="rounded-lg" src="{{recipe.image}}" alt="">
