--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -6,7 +6,7 @@
         </p>
         <div class="filter-list">
             <p class="font-bold">Meal type:</p>
-            <div class="lg:flex space-x-5">
+            <div class="lg:flex lg:space-x-5">
                 <div>
                     <label for="breakfast"> Breakfast </label>
                     <input type="checkbox" name="breakfast" id="breakfast" (change)="filterDiet($event)">
@@ -36,7 +36,7 @@
         </div>
         <p class="font-bold">Diet options:</p>
         <div class="flex">
-            <div class="filter-list lg:flex space-x-5">
+            <div class="filter-list lg:flex lg:space-x-5">
                 <div>
                     <label for="vegan"> Vegan </label>
                     <input type="checkbox" name="diet" id="vegan" (change)="filterDiet($event)" />
@@ -59,7 +59,7 @@
                 <div class="allRecipes-wrapper grid grid-cols-1 grid-rows-1 gap-2 lg:grid-cols-4 grid-rows:2">
                     <ul *ngFor="let recipe of filteredRecipes">
                         <li>
-                            <div class="recipe-card bg-blue-100 my-2 p-2 border rounded-lg max-w-xs shadow-xl">
+                            <div class="recipe-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs shadow-xl">
                                 <a routerLink="/detail/{{recipe.id}}">
                                     <h2 class="text-xl pb-2">{{recipe.title}}</h2>
                                     <img class="rounded-lg" src="{{recipe.image}}" alt="">
@@ -87,7 +87,7 @@
                                 <ng-template #showSave>
                                     <div>
                                         <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe(recipe)"
-                                            class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
+                                            class="clear bg-transparent hover:bg-green-200 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
                                             Save
                                         </button>
                                     </div>
@@ -96,7 +96,7 @@
                                 <ng-template #showRemove>
                                     <div>
                                         <button (click)="savedRecipeService.deleteRecipe($event)"
-                                            class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
+                                            class="clear bg-transparent hover:bg-red-200 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
                                             Remove
                                         </button>
                                     </div>
