--- a/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
@@ -8,10 +8,29 @@
             <li class="recipe-servings pb-2"><span class="font-bold">Servings: </span>{{recipe.servings}}</li>
             <li class="recipe-time pb-2"><span class="font-bold">Cook Time: </span>{{recipe.readyInMinutes}}min</li>
         </ul>
-        <button (click)="savedRecipeService.saveRecipe(recipe)"
+        <!-- <button (click)="savedRecipeService.saveRecipe(recipe)"
             class="clear bg-transparent hover:bg-green-200 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">Save</button>
         <button (click)="savedRecipeService.deleteRecipe($event)" class=" clear bg-transparent hover:bg-red-200 text-red-700 font-semibold hover:text-white py-1 px-2 border
-            border-red-500 hover:border-transparent rounded">Remove</button>
+            border-red-500 hover:border-transparent rounded">Remove</button> -->
+        <ng-container *ngIf="savedRecipeService.displaySave; then showSave; else showRemove">
+        </ng-container>
+        <ng-template #showSave>
+            <div>
+                <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe(recipe)"
+                    class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
+                    Save
+                </button>
+            </div>
+        </ng-template>
+        <ng-template #showRemove>
+            <div>
+                <button id="{{recipe.id}}" (click)="savedRecipeService.deleteRecipe($event)"
+                    class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
+                    Remove
+                </button>
+            </div>
+        </ng-template>
+
         <p class="text-xl pb-2 pt-2">Ingredients:</p>
         <ul class="pb-2" *ngFor="let ingredient of recipe.extendedIngredients">
             <li>{{ ingredient.name }}</li>
