--- a/my-recipe-app/src/app/components/signup/signup.component.html
+++ b/my-recipe-app/src/app/components/signup/signup.component.html
@@ -1,1 +1,47 @@
-<p>signup works!</p>
+<div class="auth-wrapper space-y-3 pb-3">
+    <form class="form-signin text-center space-y-3" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <h3 class="text-xl">Register</h3>
+
+        <!-- Errors -->
+        <div class="text-red-500" *ngIf="errors?.email">
+            {{ errors?.email }}
+        </div>
+        <div class="text-red-500" *ngIf="errors?.password">
+            {{ errors?.password }}
+        </div>
+        <div class="text-red-500" *ngIf="errors?.error">
+            {{ errors?.error }}
+        </div>
+
+        <!-- Register -->
+        <div class="form-group">
+            <label class="block text-grey-darker text-sm font-bold mb-2" for="name">Name:</label>
+            <input class="form-control shadow appearance-none border rounded w-96 py-2 px-3 text-grey-darker"
+                type="text" placeholder="John Doe" formControlName="name" required />
+        </div>
+        <div class="form-group">
+            <label class="block text-grey-darker text-sm font-bold mb-2" for="email">Email address:</label>
+            <input class="form-control shadow appearance-none border rounded w-96 py-2 px-3 text-grey-darker"
+                type="text" placeholder="movie@matcher.com" type="email" formControlName="email" required />
+        </div>
+        <div class="form-group">
+            <label class="block text-grey-darker text-sm font-bold mb-2" for="password">Password:</label>
+            <input class="form-control shadow appearance-none border rounded w-96 py-2 px-3 text-grey-darker"
+                type="password" formControlName="password" required />
+        </div>
+        <div class="form-group">
+            <label class="block text-grey-darker text-sm font-bold mb-2" for="password_confirmation">Confirm
+                Password:</label>
+            <input class="form-control shadow appearance-none border rounded w-96 py-2 px-3 text-grey-darker"
+                type="password" formControlName="password_confirmation" required />
+        </div>
+        <div class="register-button-wrapper space-x-3 flex justify-center">
+            <button type="submit"
+                class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">Register</button>
+            <div class="register-button-wrapper">
+                <button routerLink="/"
+                    class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">Back</button>
+            </div>
+        </div>
+    </form>
+</div>
