--- a/my-recipe-app/src/app/components/user-profile/user-profile.component.html
+++ b/my-recipe-app/src/app/components/user-profile/user-profile.component.html
@@ -1,1 +1,29 @@
-<p>user-profile works!</p>
+<div class="userpage-wrapper text-center ">
+    <div class="userpage-card space-y-3">
+        <img class="mx-auto" src="https://via.placeholder.com/150x250" alt="User profile image">
+        <div class="text-2xl">{{ UserProfile?.name }} - placeholder </div>
+        <div class="space-y-3">
+            <p class="card-text">
+                <strong>Email:</strong><br>
+                {{ UserProfile?.email }} - placeholder email
+            </p>
+            <div>
+
+                <p class="card-text max-w-xl mx-auto">
+                    <strong>Bio:</strong><br>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint deserunt rem nulla error temporibus
+                    saepe
+                    pariatur, maxime illo illum dicta quo earum impedit perferendis blanditiis et animi dolore non
+                    veniam?
+                </p>
+            </div>
+        </div>
+        <!-- <button
+            class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
+            Add Friend
+        </button> -->
+    </div>
+</div>
+
+<!-- Can use this code for when we are able to add friends -->
+<!-- (click)="addFriend()" *ngIf="!isFriend" -->
