--- a/my-recipe-app/src/app/components/signin/signin.component.html
+++ b/my-recipe-app/src/app/components/signin/signin.component.html
@@ -1,7 +1,5 @@
 <div class="auth-wrapper space-y-3">
     <form class="form-signin text-center space-y-3" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <h3 class="text-xl">Log In</h3>
-
         <!-- Errors -->
         <div class="text-red-500" *ngIf="errors?.email">
             {{ errors?.email }}
@@ -12,12 +10,11 @@
         <div class="text-red-500" *ngIf="errors?.error">
             {{ errors?.error }}
         </div>
-
         <!-- Login -->
         <div class="form-group">
             <label class="block text-grey-darker text-sm font-bold mb-2" for="email">Email address:</label>
             <input class="form-control shadow appearance-none border rounded w-96 py-2 px-3 text-grey-darker"
-                type="text" placeholder="movie@matcher.com" type="email" formControlName="email" />
+                type="text" placeholder="only@recipe.com" type="email" formControlName="email" />
         </div>
         <div class="form-group">
             <label class="block text-grey-darker text-sm font-bold mb-2" for="password">Password:</label>
@@ -27,10 +24,9 @@
         <div class="login-button-wrapper space-x-3">
             <button type="submit"
                 class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">Log
-                in</button>
+                In</button>
             <button routerLink="/"
                 class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">Back</button>
         </div>
-
     </form>
 </div>
